# youtube-archiver

./: .bumpversion.cfg  .gitignore  Dockerfile  LICENSE  README.md  default_site  index.html  supervisord.conf
backend/: .flake8  mypy.ini  pyproject.toml
backend/src/youtube_archiver/: cli.py  custom_types.py  downloader.py  server.py
frontend/: .eslintrc.js  index.html  package-lock.json  package.json  script.js
frontend/src/: index.html  script.js
