[tool.poetry]
name = "youtube-archiver"
version = "1.1.2"
description = "Back-end API for YouTube Archiver"
authors = ["Brian Turek <brian.turek@gmail.com>"]
license = "MIT"
include = ["src/youtube_archiver/py.typed"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[tool.poetry.dependencies]
python = "^3.7"
janus = "^0.6.1"
youtube-dl = "^2021.4.26"
mypy_extensions = { version = "^0.4.3", python = "<3.8" }
aiohttp = "^3.7.4"
youtube_dl = "^2021.4.26"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
mypy = "^0.812"
flake8 = "^3.7.9"
flake8-isort = "^4.0.0"
flake8-bugbear = "^21.4.3"
flake8-blind-except = "^0.2.0"
flake8-builtins = "^1.5.2"
flake8-logging-format = "^0.6.0"
flake8-docstrings = "^1.5.0"
flake8-bandit = "^2.1.2"
isort = "^5.8.0"

[tool.poetry.scripts]
youtube_archiver_api = 'youtube_archiver.cli:server_cli'
youtube_archiver_download = 'youtube_archiver.cli:download_cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

